@@ -1,4 +1,4 @@
-# $NetBSD: buildlink2.mk,v 1.7 2004/02/12 01:59:38 jlam Exp $
+# $NetBSD: buildlink2.mk,v 1.8 2004/02/12 02:35:06 jlam Exp $
 #
 # This Makefile fragment is included by packages that use libmilter.
 #
@@ -10,6 +10,7 @@ LIBMILTER_BUILDLINK2_MK=	# defined
 
 BUILDLINK_DEPENDS.libmilter?=		libmilter>=8.12.9nb1
 BUILDLINK_PKGSRCDIR.libmilter?=		../../mail/libmilter
+BUILDLINK_DEPMETHOD.libmilter?=		build
 
 .if exists(/usr/lib/libmilter.a)
 _MILTER_FILELIST!= ar t /usr/lib/libmilter.a
