@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5301 2004/03/27 00:06:41 wiz Exp $
+$NetBSD: CHANGES,v 1.5302 2004/03/27 21:46:07 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1523,3 +1523,5 @@ Changes to the packages collection and infrastructure in 2004:
 	Removed automake17-1.7.9 [wiz 2004-03-26]
 	Renamed pkgchk to pkg_chk [wiz 2004-03-27]
 	Updated matlab-mode to 2.3.1 [wiz 2004-03-27]
+	Updated sendmail to 8.12.11 [tron 2004-03-27]
+	Updated libmilter to 8.12.11 [tron 2004-03-27]
